assets/scss/components.scss
.clickable {
  @apply cursor-pointer select-none outline-none;
}

.disabled {
  filter: grayscale(1) opacity(0.5);
}

.section {
  @apply flex flex-col items-center;
}

@keyframes pulse-saturation {
  0% {
    filter: saturate(0) opacity(0.5);
  }

  60% {
    filter: saturate(2) opacity(0.5);
  }

  100% {
    filter: saturate(0) opacity(0.5);
  }
}

.action {
  @apply clickable flex items-center justify-center py-3 px-4 rounded-md font-semibold;
}

.round-action {
  @apply clickable rounded-full p-3 text-xl;
}

.inline-action {
  @apply clickable flex items-center py-3 pr-4 font-semibold;
}

.action,
.round-action,
.inline-action {
  &.action__processing {
    animation: 1s infinite ease-in pulse-saturation;
  }

  &:disabled {
    @apply disabled;
  }

  &:focus {
    @apply shadow-outline;
  }

  &:hover:not(:disabled) {
    @apply lighten-5 shadow-lg;
  }

  &:active:not(:disabled) {
    @apply darken-5 shadow-none;
  }
}

.green-link {
  text-decoration: underline;
  @apply text-naito-green-200;

  &:hover {
    @apply text-naito-green-100;
  }
}

.material-checkbox {
  > .material-checkbox-fake {
    cursor: pointer;
    @apply p-2;
    &::after {
      content: 'check_box_outline_blank';

      font-family: 'Material Icons';
      @apply pointer-events-none select-none text-xl;
    }
  }

  > input {
    // display flex so it stopts taking place in the DOM
    // don't display: none because then it is not focusable
    @apply w-0 h-0 overflow-hidden flex;

    &:checked ~ .material-checkbox-fake::after {
      content: 'check_box';
    }

    &:disabled ~ .material-checkbox-fake::after {
      @apply disabled;
    }

    &:focus ~ .material-checkbox-fake::after {
      @apply shadow-outline;
    }
  }

  &:hover {
    @apply lighten-5;
  }

  &:active {
    @apply darken-5;
  }
}

.transparent-input {
  @apply bg-transparent border-b-2 border-gray-300 appearance-none outline-none transition-border-color-100;

  &:focus {
    @apply border-gray-700;
  }

  &:disabled {
    @apply disabled;
  }
}

.transperent-select {
  > select {
    @apply clickable block appearance-none bg-transparent pr-4;

    &:focus {
      @apply outline-none;
    }

    > option {
      @apply bg-gray-100;

      //prevent <option>s from becoming transparent on firefox
      &:not(:checked) {
        @apply text-gray-900;
      }
    }

    // hide firefox outline
    &:-moz-focusring {
      color: transparent;
      text-shadow: 0 0 0 theme('colors.gray.900');
    }
  }

  &::after {
    content: 'arrow_drop_down';

    font-family: 'Material Icons';
    top: theme('spacing.4');
    right: theme('spacing.4');
    @apply absolute pointer-events-none;
  }
}

